<resources>
    <string name="app_name">Accelometer</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="desc_acceleration_x">Acceleration of X axis</string>
    <string name="desc_acceleration_y">Acceleration of Y axis</string>
    <string name="desc_acceleration_z">Acceleration of Z axis</string>
    <string name="value_acceleration_x">0.0</string>
    <string name="value_acceleration_y">0.0</string>
    <string name="value_acceleration_z">0.0</string>
    <string name="default_meter_test">+++|+++</string>
    <string name="title">Acceleration Meter</string>
    <string name="stop_recording">stop</string>
    <string name="elapsed_time">0 sec</string>
    <string name="start_recording">start</string>
    <string name="toggle_save">SAVE</string>
    <string name="empty_string">EMPTY_STRING</string>
    <string name="nekoze_off">INUZE</string>
    <string name="nekoze_on">NEKOZE</string>
</resources>
