<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/desc_acceleration_z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/desc_acc_z" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/desc_acc_y"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/desc_acceleration_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/desc_acc_y"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/desc_acc_x"
    />
    <TextView
            android:text="@string/desc_acceleration_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/desc_acc_x"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/title"/>
    <TextView
            android:text="@string/value_acceleration_z"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/value_acc_z"
            app:layout_constraintBaseline_toBaselineOf="@+id/desc_acc_z"
            app:layout_constraintStart_toEndOf="@+id/desc_acc_z" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored"
            android:textColor="#E91E63" android:textStyle="bold" android:fontFamily="monospace"/>
    <TextView
            android:text="@string/value_acceleration_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/value_acc_x" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/desc_acc_x"
            app:layout_constraintBaseline_toBaselineOf="@+id/desc_acc_x" android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored"
            android:textColor="#E91E63" android:textStyle="bold" android:fontFamily="monospace"/>
    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="24sp" android:textAlignment="center"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/desc_acc_z"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/toggleButton">
        <TextView
                android:text="@string/desc_acceleration_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/in_layer_desc_acc_x"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/text_meter_x" android:fontFamily="monospace"
                android:text="@string/default_meter_test" android:textAlignment="center"/>
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar_acc_x"/>
        <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/seekBarX" android:progressTint="#00FFFFFF"
        />
        <TextView
                android:text="@string/desc_acceleration_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/in_layer_desc_acc_y"/>
        <TextView
                android:text="@string/default_meter_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/text_meter_y" android:textAlignment="center"
                android:fontFamily="monospace"/>
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar_acc_y"/>
        <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/seekBarY" android:progressTint="#00FFFFFF"
        />
        <TextView
                android:text="@string/desc_acceleration_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/in_layer_desc_acc_z"/>
        <TextView
                android:text="@string/default_meter_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/text_meter_z" android:textAlignment="center"
                android:fontFamily="monospace"/>
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar_acc_z"/>
        <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/seekBarZ" android:progressTint="#00FFFFFF"
        />
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/scrollView">
            <TextView
                    android:text="@string/empty_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/loggingTextView"/>
        </ScrollView>
    </LinearLayout>
    <TextView
            android:text="@string/value_acceleration_y"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/value_acc_y" app:layout_constraintStart_toEndOf="@+id/desc_acc_y"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintBaseline_toBaselineOf="@+id/desc_acc_y"
            android:textColor="#E91E63" android:textStyle="bold" android:fontFamily="monospace"/>
    <TextView
            android:text="@string/elapsed_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/elapsed_time"
            android:layout_marginStart="8dp"
            android:textAlignment="viewEnd"
            app:layout_constraintStart_toEndOf="@+id/progressBar9"
            app:layout_constraintEnd_toStartOf="@+id/toggleButton" android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/toggleButton"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/progressBar9" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:indeterminate="true" android:progress="100"
            android:max="100" android:visibility="invisible"/>
    <ToggleButton
            android:text="@string/toggle_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:id="@+id/toggleButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:onClick="toggleRecordingStatus"/>
</android.support.constraint.ConstraintLayout>